fixed overflow of hero image sliding in from right

--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -47,4 +47,5 @@ section {
   z-index: 5;
   position: relative;
   background-color: white;
+  overflow-x: hidden;
 }
